transitionにおいてat ruleで定義したカスタムプロパティを使用する際はvar()を利用しないが、現状のstylelintのバージョンだと許容されないため、stylelint-disable を追加 ※ stylelintのバージョンが16.2.1以上だと、transitionにおいてat ruleで定義したカスタムプロパティを使用することが許容される

--- a/packages/progress-indicator/_mixins.scss
+++ b/packages/progress-indicator/_mixins.scss
@@ -85,6 +85,7 @@
         transparent 0
       );
     border-radius: 50%;
+    // stylelint-disable-next-line custom-property-no-missing-var-function
     transition: --circular-percentage 0.1s ease;
     content: "";
     mask-image:
